kubfiles/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/client-side: "true"
        io.kompose.network/server-side: "true"
        io.kompose.service: api
    spec:
      containers:
        - env:
            - name: PGPASSFILE
              value: /app/pass.pgpass
          image: api
          name: api
          ports:
            - containerPort: 8000
          resources: {}
          volumeMounts:
            - mountPath: /app/uploads
              name: api-claim0
      restartPolicy: Always
      volumes:
        - name: api-claim0
          persistentVolumeClaim:
            claimName: api-claim0
status: {}
