kubfiles/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/server-side: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: DB_USER_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DB_USER_PASSWORD
                  name: env-production-db
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: env-production-db
          image: postgres:14.7
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
            - mountPath: /docker-entrypoint-initdb.d/init.sql
              name: db-claim1
      restartPolicy: Always
      volumes:
        - name: database
          persistentVolumeClaim:
            claimName: database
        - name: db-claim1
          persistentVolumeClaim:
            claimName: db-claim1
status: {}
