kubfiles/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "54320"
      port: 54320
      targetPort: 5432
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
