kubfiles/client-side-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: client-side
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/client-side: "true"
  podSelector:
    matchLabels:
      io.kompose.network/client-side: "true"
