kubfiles/server-side-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: server-side
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/server-side: "true"
  podSelector:
    matchLabels:
      io.kompose.network/server-side: "true"
